# WebPublish

./: Cargo.toml  build.rs  flake.nix  readme.md  webpublish.capnp
crates/webpublish/: Cargo.toml  build.rs
crates/webpublish/src/: apply.rs  configuration.rs  decode.rs  invocation.rs  lib.rs  stdin_bytes.rs  wrangler.rs
src/: decode.rs  main.rs  model.rs  webpublish_capnp.rs
src/hosting/: cloudflare.rs  mod.rs
