[package]
name = "webpublish"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "webpublishd"
path = "src/main.rs"

[dependencies]
capnp = "0.18"
anyhow = "1"
thiserror = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }

[build-dependencies]
capnpc = "0.18"
